src/kubernetes/03-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld
  # set your namespace
  namespace: svdh
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: gcr.io/workshop-bielefeld/helloworld:1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8079
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8079
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /opt/data
              name: data-volume
          volumes:
            - name: data-volume
            persistentVolumeclaim:
              claimName: helloworld-pvc
