src/kubernetes/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  # set your namespace
  namespace: svdh
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: helloworld
